--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "2016 U.S. election change in votes from 2012.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && vite build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -16,9 +19,11 @@
   "bugs": {
     "url": "https://github.com/ekenes/election-2016/issues"
   },
-  "homepage": "https://github.com/ekenes/election-2016#readme",
+  "homepage": "https://poke-key.github.io/elections",
   "dependencies": {},
   "devDependencies": {
-    "@types/arcgis-js-api": "http://jscore.esri.com/javascript/latest/api-reference/typings/arcgis-js-api-4.17.tgz"
+    "@types/arcgis-js-api": "http://jscore.esri.com/javascript/latest/api-reference/typings/arcgis-js-api-4.17.tgz",
+    "typescript": "^4.x.x",
+    "vite": "^4.x.x"
   }
 }
