--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "election-2016",
+  "name": "elections",
   "version": "1.0.0",
-  "description": "2016 U.S. election change in votes from 2012.",
+  "description": "US Election Results Visualization",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && vite build",
-    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ekenes/election-2016.git"
+  "dependencies": {
+    "@arcgis/core": "^4.28.10",
+    "typescript": "^5.3.3"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ekenes/election-2016/issues"
-  },
-  "homepage": "https://poke-key.github.io/elections",
-  "dependencies": {},
   "devDependencies": {
-    "@types/arcgis-js-api": "http://jscore.esri.com/javascript/latest/api-reference/typings/arcgis-js-api-4.17.tgz",
-    "typescript": "^4.x.x",
-    "vite": "^4.x.x"
-  }
+    "vite": "^5.0.10"
+  },
+  "homepage": "https://poke-key.github.io/elections"
 }
